--- a/style.css
+++ b/style.css
@@ -5,50 +5,53 @@ body {
 }
 
 .grib-layout {
+    height: 650px;
+    /*altura de las caja*/
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto;
     /*cantidad de colummas y modificarlas*/
-    grid-template-rows: auto auto;
-    /*modificar el comportamiento de fila dearriba y abajo*/
-    justify-content: stretch;
-    /*ajustar o alinear el contenido al principio */
-    width: 80%;
-    margin: 0 auto;
+    /* grid-template-rows: auto auto;
+    modificar el comportamiento de fila dearriba y abajo*/
+    /* justify-content: stretch;
+    ajustar o alinear el contenido al principio */
+    /* width: 80%;
+   padding: 20px;
+    margin: 0 auto;*/
     background-color: rgb(224, 25, 25);
-    padding: 20px;
     border: 1px solid rgb(5, 5, 5);
+    grid-template-rows: 20% 10% 60% auto;
+    /*pongo tamaño de cada caja 20 la cabecera 10 el menu el contenido en 60 */
 }
 
 .cajas {
     border: 4px solid black;
     background-color: beige;
     text-align: center;
-    line-height: 150px;
-    /* float: left;
+    padding: 20px;
+    /* line-height: 150px;
+    float: left;
    poner las cajas en linea */
 }
 
 .C1 {
-    grid-column: 1/4;
+    grid-column: 1/span 2;
     background-color: rgb(159, 159, 210);
 }
 
 .C2 {
-    grid-column: 1/3;
-    background-color: rgb(9, 86, 18);
+    grid-column: 1/span 2;
+    background-color: rgb(215, 142, 46);
 }
 
 .C3 {
-    grid-column: 3/4;
     background-color: rgb(81, 176, 92);
 }
 
-.C4 {
-    grid-column: 1/3;
+.C5 {
+    grid-column: 1/span 2;
     background-color: rgb(29, 165, 196);
 }
 
 .C12 {
-    grid-column: 1/4;
     background-color: rgb(196, 29, 177);
 }
