posicionando cajas mas facil conarea con grid

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
     height: 650px;
     /*altura de las caja*/
     display: grid;
-    grid-template-columns: auto auto;
-    /*cantidad de colummas y modificarlas*/
+    /* grid-template-columns: 80% auto;
+    cantidad de colummas y modificarlas*/
     /* grid-template-rows: auto auto;
     modificar el comportamiento de fila dearriba y abajo*/
     /* justify-content: stretch;
@@ -17,10 +17,11 @@ body {
     /* width: 80%;
    padding: 20px;
     margin: 0 auto;*/
+    grid-template-areas: "cabecera cabecera" "menu menu" "contenido lateral" "footer footer";
     background-color: rgb(224, 25, 25);
     border: 1px solid rgb(5, 5, 5);
-    grid-template-rows: 20% 10% 60% auto;
-    /*pongo tamaño de cada caja 20 la cabecera 10 el menu el contenido en 60 */
+    /*grid-template-rows: 20% 10% 60% auto;
+    pongo tamaño de cada caja 20 la cabecera 10 el menu el contenido en 60 */
 }
 
 .cajas {
@@ -34,24 +35,26 @@ body {
 }
 
 .C1 {
-    grid-column: 1/span 2;
+    grid-area: cabecera;
     background-color: rgb(159, 159, 210);
 }
 
 .C2 {
-    grid-column: 1/span 2;
+    grid-area: menu;
     background-color: rgb(215, 142, 46);
 }
 
 .C3 {
+    grid-area: contenido;
     background-color: rgb(81, 176, 92);
 }
 
-.C5 {
-    grid-column: 1/span 2;
+.C4 {
+    grid-area: lateral;
     background-color: rgb(29, 165, 196);
 }
 
-.C12 {
+.C5 {
+    grid-area: footer;
     background-color: rgb(196, 29, 177);
 }
